--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.893.0",
+    "@aws-sdk/s3-request-presigner": "^3.893.0",
     "@react-pdf/renderer": "^4.3.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
