Implement short URL generation for receipt links
Added support for creating and storing short URLs for receipt tokens using a file-based mapping system. Updated relevant API routes and components to utilize short IDs, improving usability and link sharing. Introduced a new error page for invalid or expired receipt links.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-qr-code": "^2.0.18",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
