--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
+    "@upstash/redis": "^1.35.4",
     "aws-sdk": "^2.1692.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
